--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ project(data_structures)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(data_structures main.cpp heap/heap.cpp heap/heap.h dump.cpp dump.h heap/heap_test.cpp heap/heap_test.h tree/bin_search_tree.cpp tree/bin_search_tree.h tree/bin_search_tree_test.cpp tree/bin_search_tree_test.h tree/bst_node.cpp tree/bst_node.h)
+
+add_subdirectory(sort)
+
+target_link_libraries(data_structures PUBLIC sort)
