add hunber for package management; add gtest and testcase for sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,11 @@
 cmake_minimum_required(VERSION 3.23)
+
+include("cmake/HunterGate.cmake")
+HunterGate(
+        URL "https://github.com/cpp-pm/hunter/archive/v0.24.17.tar.gz"
+        SHA1 "e6396699e414120e32557fe92db097b7655b760b"
+)
+
 project(data_structures)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -8,3 +15,4 @@ add_executable(data_structures main.cpp heap/heap.cpp heap/heap.h dump.cpp dump.
 add_subdirectory(sort)
 
 target_link_libraries(data_structures PUBLIC sort)
+
