--- a/sort/CMakeLists.txt
+++ b/sort/CMakeLists.txt
@@ -2,3 +2,5 @@ add_library(sort select_sort.cpp select_sort.h)
 
 add_executable(sort_test test.cpp)
 target_link_libraries(sort_test PRIVATE sort GTest::gtest_main)
+
+add_test(NAME sort_test COMMAND sort_test)
