add insert sort

--- a/sort/CMakeLists.txt
+++ b/sort/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(sort select_sort.cpp select_sort.h)
+add_library(sort select_sort.cpp select_sort.h insert_sort.cpp insert_sort.h)
 
 add_executable(sort_test test.cpp)
 target_link_libraries(sort_test PRIVATE sort GTest::gtest_main)
